added image to news and fixed styling

--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -486,10 +486,17 @@ a:link {
   font-weight: bold;
   margin: 0;
   color: $header-gray;
+  text-align: justify;
 }
 
 .news-body {
   font-size: 12px;
+  text-align: justify;
+}
+
+.news-image {
+  font-size: 12px;
+  width: 100%;
 }
 
 // Sixth box styling
