--- a/app/assets/stylesheets/components/_signin.scss
+++ b/app/assets/stylesheets/components/_signin.scss
@@ -1,13 +1,7 @@
 .login-flex {
   display: flex;
   justify-content: space-around;
-}
-
-.payment-flex {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  align-items: center;
+  padding-top: 69px;
 }
 
 .login-wrapper {
