--- a/app/assets/stylesheets/components/_stripe-button.scss
+++ b/app/assets/stylesheets/components/_stripe-button.scss
@@ -6,4 +6,7 @@ button.stripe-button-el>span {
   text-shadow: none;
   font-family: 'Lato', 'sans-serif';
   font-size: 16px;
+  width: 251px;
+  height: 33px;
+  border-radius: 2px;
 }
