--- a/app/assets/stylesheets/components/_facebook-button.scss
+++ b/app/assets/stylesheets/components/_facebook-button.scss
@@ -6,9 +6,10 @@
     display: flex;
     justify-content: center;
     padding: 10px;
+    border-radius: 3px;
     align-items: center;
     p {
-      font-size: 20px;
+      font-size: 15px;
       color: white;
       margin-left: 15px;
       margin-bottom: 0px;
