--- a/app/views/cryptocurrencies/index.html.erb
+++ b/app/views/cryptocurrencies/index.html.erb
@@ -32,7 +32,8 @@
                 <% else %>
                   <td class="index-value table-value" data-sort='<%= value_held %>'>$<%= number_with_delimiter(value_held.round, delimeter: ',') %></td>
                 <% end %>
-                <td class="index-value table-value price-value" data-sort='<%= price %>'>$<%= number_with_delimiter(price.round(4), delimeter: ",") %></td>
+                <% price_precision = price > 1 ? 2 : 4 %>
+                <td class="index-value table-value price-value" data-sort='<%= price %>'>$<%= number_with_precision(price, precision: price_precision, locale: :en) %></td>
               </tr>
             <% end %>
           </tbody>
