--- a/app/assets/stylesheets/components/_buy-sell-form.scss
+++ b/app/assets/stylesheets/components/_buy-sell-form.scss
@@ -1,7 +1,7 @@
 
 .inputs-wrapper {
   display: flex;
-  margin-top: 60px;
+  margin-top: 70px;
   align-items: center;
   justify-content: space-around;
   // padding-right: 50px;
@@ -81,8 +81,9 @@
 }
 
 .crypto-warning {
-  margin-right: 12px;
-  padding-left: 10px;
+  margin-right: 30px;
+  padding-left: 110px;
+  margin-top: 2px;
   height: 44px;
 }
 
@@ -97,41 +98,111 @@
 }
 
 
+.trial-buy-sell {
+  border: 0.5px solid $light-gray;
+  width: 500px;
+  height: 60px;
+  display: flex;
+  align-items: center;
+  padding: 20px 8px;
+  border-radius: 2px;
+}
+
+.trial-max-btn {
+  font-weight: bold;
+  font-size: 12px;
+  color: rgb(225, 225, 225);
+  border: 1px solid rgb(225, 225, 225);
+  padding: 2px 6px;
+  cursor: pointer;
+  border-radius: 2px;
+  margin-left: 6px;
+}
+
+.trial-max-btn:hover {
+  color: rgb(170, 170, 170);
+  border-color: rgb(170, 170, 170);
+}
+
+
+.buy-input-container {
+  display: flex;
+  margin-top: 0px;
+  justify-content: center;
+  align-items: center;
+  width: 600px;
+  input {
+    margin: 10px;
+  }
+}
+
+.exchange-arrow {
+  color: $header-gray;
+  font-size: 16px;
+  font-weight: normal;
+}
+
+.buy-window {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
 // Here starts CSS for the form inputs
 
 #tradeValueCryptoBuy {
-  height: 60px;
+  height: 58px;
   font-size: 20px;
   font-weight: normal;
-  border: 0.5px solid $light-gray;
-  border-left: none;
-  border-bottom-left-radius: 0;
-  border-top-left-radius: 0;
+  border: none;
+  box-shadow: none !important;
+  margin: 2px;
+}
+
+#tradeValueCryptoBuy:focus {
+  border: none ;
+  box-shadow: none;
 }
 
 #tradeValueFiatBuy {
-  height: 60px;
+  height: 58px;
   font-size: 20px;
   font-weight: normal;
-  border: 0.5px solid $light-gray;
-  border-right: none;
-  border-bottom-right-radius: 0;
-  border-top-right-radius: 0;
+  border: none;
+  box-shadow: none !important;
+  margin: 2px;
 }
 
+#tradeValueFiatBuy:focus {
+  border: none ;
+  box-shadow: none;
+}
 
 #tradeValueCryptoSell {
-  height: 60px;
+  height: 58px;
   font-size: 20px;
   font-weight: normal;
-  // margin: 0;
-  border: 0.5px solid $light-gray;
+  border: none;
+  box-shadow: none !important;
+  margin: 2px;
 }
 
+#tradeValueCryptoSell:focus {
+  border: none ;
+  box-shadow: none;
+}
+
+
 #tradeValueFiatSell {
-  height: 60px;
+  height: 58px;
   font-size: 20px;
   font-weight: normal;
-  // margin: 0;
-  border: 0.5px solid $light-gray;
+  border: none;
+  box-shadow: none !important;
+  margin: 2px;
+}
+
+#tradeValueFiatSell:focus {
+  border: none ;
+  box-shadow: none;
 }
