--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -42,7 +42,7 @@
   margin: 0 0px 40px 70px;
 }
 .footer-social-links a {
-  color: black;
+  color: $header-gray;
   opacity: 0.15;
   text-decoration: none;
   font-size: 24px;
