--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -38,5 +38,5 @@
 </div>
 <div class="col-footer">
   <div class="item">© 2018 Croker. All Rights Reserved.</div>
-  <div class="item">Made at Le Wagon, Lisbon 🇵🇹</div>
+  <div class="item" style="text-align: right;">Made at Le Wagon, Lisbon 🇵🇹</div>
 </div>
