--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -470,10 +470,16 @@ a:link {
 
 .news-card {
   margin: 15px;
+  min-height: 215px;
+  max-height: 500px;
 }
 
 .news-card:hover {
   background-color: #F4F4F4;
+}
+
+.news-content {
+  width: 100%;
 }
 
 .news-img {
@@ -497,6 +503,14 @@ a:link {
 .news-image {
   font-size: 12px;
   width: 100%;
+  text-align:center;
+  padding: 6px 0;
+  padding-right: 6px;
+  float: left;
+  width: auto;
+  max-width: 100%;
+  height: auto;
+  max-height: 190px;
 }
 
 // Sixth box styling
