--- a/app/views/payments/new.html.erb
+++ b/app/views/payments/new.html.erb
@@ -4,7 +4,7 @@
     <div id= "payment-flex" class="login-wrapper payment-flex" style="padding-top: 20px;">
       <div class="cont top-part">
         <%= image_tag "topup_frog.png", class: "logo-topup"%>
-        <h2 class="text-center" style="margin-bottom: 40px;">Please confirm your top up of <%= money_without_cents_and_with_symbol(@top_up.fiat_amount.round) %></h2>
+        <h2 class="text-center">Please confirm your top up of <%= money_without_cents_and_with_symbol(@top_up.fiat_amount.round) %></h2>
       </div>
       <div class="cont">
       <%= form_tag top_up_payments_path(@top_up) do %>
