Button on landing page changed to go to buy/sell path

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -53,7 +53,7 @@
       <h1 class="brand-heading">Crypto Trading Made Easy</h1>
       <p class="intro-text"><strong>Croker</strong> is your <strong>gateway</strong> into the <strong>cryptosphere</strong>.
       </p>
-        <%= link_to "Start Trading Now", dashboard_path, class: "lp-sign-up-btn"  %>
+        <%= link_to "Start Trading Now", cryptocurrencies_path, class: "lp-sign-up-btn"  %>
     </div>
     <div class="lp-dashboard-container text-center">
       <%= image_tag 'lp-dashboard-snap.png', class: 'dashboard-lp' %>
@@ -154,7 +154,7 @@
       <div class="container">
         <h1>Ready to fill your crypto bags?</h1>
         <p><strong>Get started</strong> with as little as <strong>$50</strong> and enjoy the ride.</p>
-         <%= link_to "Start Trading Now", dashboard_path, class: "lp-sign-up-btn"  %>
+         <%= link_to "Start Trading Now", cryptocurrencies_path, class: "lp-sign-up-btn"  %>
       </div>
     </div>
  </div>
